update pom version compile java